third_party/move/move-prover/tests/sources/functional/closures/inline/opaque_inline_nested_fail.exp
Move prover returns: exiting with bytecode transformation errors
error: captured mutable reference must be a direct borrow of a local variable
   ┌─ tests/sources/functional/closures/inline/opaque_inline_nested_fail.move:25:23
   │
25 │         call_outer(|| call_once(|i| x = x + i spec { ensures x == old(x) + i; }) // error: captured mutable reference must be a direct borrow
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
